Refactor camera preview to native OpenCV Swing capture

--- a/app-java/GestureHarmonyToolUI/pom.xml
+++ b/app-java/GestureHarmonyToolUI/pom.xml
@@ -27,8 +27,13 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
+            <artifactId>javafx-swing</artifactId>
             <version>22.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.9.0-0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
